# mico

./: CMakeLists.txt  kernel_toolchain.cmake  naming.txt  vcpkg.json
client/: CMakeLists.txt  app.manifest  main.c
client/display/: dpy.h  dpy_win.c  dpydev.c  dpydev.h
client/emu/: device.h  emu.c  emu.h  loader.c  loader.h
client/memory/: hostmem.h  hostmem_win.c
client/os/: event.c  event.h
kernel/: CMakeLists.txt  kernel.ld
kernel/inc/micok/: emu.h  rpc.h  version.h
kernel/inc/micok/display/: dpydev.h  dpytext.h
kernel/inc/micok/emu/: device.h
kernel/src/: boot.S  device.c  dpydev.c  dpytext.c  emu.c  kmain.c  rpc.c
shared/: CMakeLists.txt
shared/inc/micos/: display.h  emu.h  err.h  memory.h  rpc.h  xerr.h
shared/src/memory/: memutil.c
